--- a/themes/terminal/layouts/partials/comments.html
+++ b/themes/terminal/layouts/partials/comments.html
@@ -11,7 +11,7 @@ or whatever comment engine you want -> https://gohugo.io/content-management/comm
 <script>
 (function() {
 var d = document, s = d.createElement('script');
-s.src = 'https://larnsce.disqus.com/embed.js';
+s.src = 'https://www.mathiejosh.xyz';
 s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
 })();
