--- a/themes/terminal/layouts/_default/single.html
+++ b/themes/terminal/layouts/_default/single.html
@@ -40,6 +40,8 @@
     </div>
   {{ end }}
 
+  {{ partial "share-buttons.html" . }}
+
   <div class="post-content">
     {{- with .Content -}}
       <div>
