tring to get termynal.js working

--- a/layouts/head.html
+++ b/layouts/head.html
@@ -74,3 +74,11 @@
 
 <!-- Extended head section-->
 {{ partial "extended_head.html" . }}
+
+// css
+{{ range .Site.Params.custom_css -}}
+    <link rel="stylesheet" href="{{ . | absURL }}">
+{{- end }}
+
+// javascript
+
