--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -74,3 +74,12 @@
 
 <!-- Extended head section-->
 {{ partial "extended_head.html" . }}
+
+// css
+{{ range .Site.Params.custom_css -}}
+    <link rel="stylesheet" href="{{ . | absURL }}">
+{{- end }}
+
+// javascript
+<script src="termynal.js" data-termynal-container="#termynal"></script>
+<link rel="stylesheet" href="termynal.css">
