--- a/static/style.css
+++ b/static/style.css
@@ -15,3 +15,47 @@ color: #00ff9f;
 }
 
 
+.headings--one-size {                                                           
+   h1,                                                                           
+   h2,                                                                           
+   h3,                                                                           
+   h4,                                                                           
+   h5,                                                                           
+   h6 {                                                                          
+    line-height: 1.3;                                                           
+        margin-top: 40px;                                                         
+      }                                                                           
+   }                      
+
+
+h1 {
+    font-size: 36px;
+    line-height: 40px;
+}
+
+h2 {
+    font-size: 30px;
+    line-height: 40px;
+}
+
+h3 {
+    font-size: 24px;
+    line-height: 40px;
+}
+
+h4 {
+    font-size: 18px;
+    line-height: 20px;
+}
+
+/* Won't be used here */
+
+h5 {
+    font-size: 14px;
+    line-height: 20px;
+}
+
+h6 {
+    font-size: 12px;
+    line-height: 20px;
+}
