--- a/themes/terminal/assets/css/main.css
+++ b/themes/terminal/assets/css/main.css
@@ -38,21 +38,29 @@ body {
   h6 {
     line-height: 1.3;
 
-    &:not(first-child) {
+    (first-child) {
       margin-top: 40px;
     }
   }
 
-  h1,
-  h2,
+  h1 {
+    font-size: 36px;
+  }
+  h2 {
+    font-size: 30px;
+  }
   h3 {
-    font-size: 1.4rem;
+    font-size: 24px;
   }
 
-  h4,
-  h5,
+  h4 {
+    font-size: 18px;
+  }
+  h5 {
+    font-size: 14px;
+  }
   h6 {
-    font-size: 1.2rem;
+    font-size: 12px;
   }
 }
 
