--- a/themes/terminal/assets/css/main.css
+++ b/themes/terminal/assets/css/main.css
@@ -29,26 +29,32 @@ body {
   }
 }
 
-
-  h1 {
-    font-size: 36px;
-  }
-  h2 {
-    font-size: 30px;
-  }
-  h3 {
-    font-size: 24px;
-  }
-
-  h4 {
-    font-size: 18px;
-  }
-  h5 {
-    font-size: 14px;
-  }
+.headings--one-size {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
   h6 {
-    font-size: 12px;
+    line-height: 1.3;
+
+    &:not(first-child) {
+      margin-top: 40px;
+    }
   }
+
+  h1,
+  h2,
+  h3 {
+    font-size: 1.4rem;
+  }
+
+  h4,
+  h5,
+  h6 {
+    font-size: 1.2rem;
+  }
+}
 
 a {
   color: inherit;
