--- a/themes/terminal/assets/css/syntax.scss
+++ b/themes/terminal/assets/css/syntax.scss
@@ -14,8 +14,10 @@ code.language-scss,
 .token.statement,
 .token.regex,
 .token.atrule,
-.token.number {
-  color: var(--accent);
+.token.number,
+.token.inserted,
+.token.important {
+  color: $accent !important;
 }
 
 .token.tag-id,
@@ -24,16 +26,25 @@ code.language-scss,
 .token.unit,
 .token.placeholder,
 .token.variable,
-.token.attr-name {
-  color: color-mod(var(--accent) a(70%));
+.token.tag,
+.token.attr-name,
+.token.namespace,
+.token.deleted,
+.token.property,
+.token.class-name,
+.token.constant,
+.token.symbol {
+  color: opacify($accent, .7) !important;
 }
 
 .token.property,
 .token.function,
+.token.function-name,
+.token.deleted,
 code.language-javascript,
 code.language-html,
 .command-line-prompt > span:before {
-  color: color-mod(var(--accent) blend(#999 90%));
+  color: mix($accent, #999, .9) !important;
 }
 
 .token.selector,
@@ -46,15 +57,21 @@ code.language-html,
 .token.prolog,
 .token.doctype,
 .token.cdata {
-  color: rgba(255, 255, 255, .3);
+  color: rgba(255, 255, 255, .3) !important;
 }
 
 .token.namespace {
-  opacity: .7;
+  opacity: .7 !important;
 }
 
 pre[data-line] {
   position: relative;
+}
+
+pre[class*="language-"] {
+  margin: 0;
+  padding: 0;
+  overflow: auto;
 }
 
 .line-highlight {
@@ -63,7 +80,7 @@ pre[data-line] {
   right: 0;
   padding: 0;
   margin: 0;
-  background: color-mod(var(--accent) blend(#999 90%) a(8%));
+  background: opacify(mix($accent, #999, 90%), .08);
   pointer-events: none;
   line-height: inherit;
   white-space: pre;
@@ -96,4 +113,41 @@ pre[data-line] {
 .line-numbers .line-highlight:before,
 .line-numbers .line-highlight:after {
   content: none;
+}
+
+.code-toolbar {
+  $code-margin: 40px;
+	position: relative;
+	margin: $code-margin 0;
+	padding: 20px;
+	border: 1px solid rgba(255, 255, 255, .1);
+
+	+ .code-toolbar,
+	+ .highlight,
+	+ .highlight .code-toolbar {
+		border-top: 0;
+		margin-top: calc(-1 * $code-margin);
+	}
+
+	pre, code {
+		border: none;
+	}
+
+	code {
+		display: block;
+		color: inherit;
+	}
+
+  > .toolbar {
+    button {
+      font-size: .8em !important;
+      background: hsla(0,0%,87.8%,.2) !important;
+      color: #bbb !important;
+      box-shadow: 0 2px 0 0 rgba(0,0,0,.2) !important;
+      border-radius: 0 !important;
+      margin: 6px !important;
+      padding: 10px !important;
+      user-select:none
+    }
+  }
 }
